# learn-opengl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h  vcpkg-configuration.json  vcpkg.json  window.cpp  window.h
shaders/: shader.frag
